-- ============================================================
-- Baza: Oracle Autonomous Database (Free Tier)
-- Uruchamiac wpierw jako uzytkownik ADMIN w SQL Developer Web
-- ============================================================

CREATE SEQUENCE SEQ_ROLES START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_PRZEZNACZENIE START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_ZRODLA START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_USERS START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_DZIALKI START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_BUDYNKI START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_LOKALE START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_KW START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_HISTORIA_WL START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_HIPOTEKI START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_TRANSAKCJE START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_OGLOSZENIA START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_HISTORIA_CEN START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

CREATE SEQUENCE SEQ_STATYSTYKI START
WITH
    1 INCREMENT BY 1 NOCACHE NOCYCLE;

-- ============================================================
-- Role uzytkownikow
-- UML: RolaUzytkownika <|-- Obywatel, Agent, Deweloper, Urzednik, Bank, Analityk
-- ============================================================
CREATE TABLE ROLE_UZYTKOWNIKOW (
    ROLE_ID NUMBER DEFAULT SEQ_ROLES.NEXTVAL PRIMARY KEY,
    NAZWA VARCHAR2 (50) NOT NULL UNIQUE,
    OPIS VARCHAR2 (200),
    MOZE_WYSTAWIAC_OGLOSZENIA NUMBER (1) DEFAULT 0 CHECK (
        MOZE_WYSTAWIAC_OGLOSZENIA IN (0, 1)
    ),
    WIDZI_DANE_OSOBOWE NUMBER (1) DEFAULT 0 CHECK (WIDZI_DANE_OSOBOWE IN (0, 1)),
    MOZE_AKTUALIZOWAC_KATASTER NUMBER (1) DEFAULT 0 CHECK (
        MOZE_AKTUALIZOWAC_KATASTER IN (0, 1)
    ),
    TYLKO_DANE_AGREGOWANE NUMBER (1) DEFAULT 0 CHECK (
        TYLKO_DANE_AGREGOWANE IN (0, 1)
    )
);

-- ============================================================
-- Slownik: Przeznaczenie gruntow
-- ============================================================
CREATE TABLE PRZEZNACZENIE_GRUNTOW (
    PRZEZNACZENIE_ID NUMBER DEFAULT SEQ_PRZEZNACZENIE.NEXTVAL PRIMARY KEY,
    NAZWA VARCHAR2 (100) NOT NULL UNIQUE,
    OPIS VARCHAR2 (500)
);

-- ============================================================
-- Slownik: Zrodla ogloszen (system + portale zewnetrzne)
-- ============================================================
CREATE TABLE ZRODLA_OGLOSZEN (
    ZRODLO_ID NUMBER DEFAULT SEQ_ZRODLA.NEXTVAL PRIMARY KEY,
    NAZWA VARCHAR2 (100) NOT NULL UNIQUE,
    URL_BAZOWY VARCHAR2 (500),
    AKTYWNE NUMBER (1) DEFAULT 1 CHECK (AKTYWNE IN (0, 1))
);

-- ============================================================
-- Uzytkownicy systemu (6 rol + admin)
-- ============================================================
CREATE TABLE USERS (
    USER_ID NUMBER DEFAULT SEQ_USERS.NEXTVAL PRIMARY KEY,
    IMIE VARCHAR2 (100) NOT NULL,
    NAZWISKO VARCHAR2 (100) NOT NULL,
    EMAIL VARCHAR2 (255) NOT NULL UNIQUE,
    TELEFON VARCHAR2 (20),
    ROLA_ID NUMBER NOT NULL REFERENCES ROLE_UZYTKOWNIKOW (ROLE_ID),
    STATUS VARCHAR2 (20) DEFAULT 'AKTYWNY' CHECK (
        STATUS IN ('AKTYWNY', 'ZAWIESZONY', 'USUNIETY')
    ),
    DATA_REJESTRACJI TIMESTAMP DEFAULT SYSTIMESTAMP,
    DATA_USUNIECIA TIMESTAMP
);

-- ============================================================
-- Dzialki katastralne (EGIB)
-- ============================================================
CREATE TABLE DZIALKI (
    DZIALKA_ID NUMBER DEFAULT SEQ_DZIALKI.NEXTVAL PRIMARY KEY,
    NUMER_EGIB VARCHAR2 (50) NOT NULL UNIQUE,
    POWIERZCHNIA_M2 NUMBER (12, 2) NOT NULL CHECK (POWIERZCHNIA_M2 > 0),
    PRZEZNACZENIE_ID NUMBER REFERENCES PRZEZNACZENIE_GRUNTOW (PRZEZNACZENIE_ID),
    WSPOLRZEDNE_LAT NUMBER (10, 7),
    WSPOLRZEDNE_LON NUMBER (10, 7),
    GMINA VARCHAR2 (100) NOT NULL,
    POWIAT VARCHAR2 (100),
    WOJEWODZTWO VARCHAR2 (100) NOT NULL,
    NUMER_KW VARCHAR2 (30)
);

-- ============================================================
-- Budynki
-- ============================================================
CREATE TABLE BUDYNKI (
    BUDYNEK_ID NUMBER DEFAULT SEQ_BUDYNKI.NEXTVAL PRIMARY KEY,
    DZIALKA_ID NUMBER NOT NULL REFERENCES DZIALKI (DZIALKA_ID),
    ROK_BUDOWY NUMBER (4),
    MATERIAL_KONSTRUKCJI VARCHAR2 (50) CHECK (
        MATERIAL_KONSTRUKCJI IN (
            'CEGLA',
            'BETON',
            'DREWNO',
            'STAL',
            'WIELKA_PLYTA',
            'INNE'
        )
        OR MATERIAL_KONSTRUKCJI IS NULL
    ),
    KLASA_ENERGETYCZNA VARCHAR2 (5) CHECK (
        KLASA_ENERGETYCZNA IN (
            'A+',
            'A',
            'B',
            'C',
            'D',
            'E',
            'F',
            'G'
        )
        OR KLASA_ENERGETYCZNA IS NULL
    ),
    TYP_OGRZEWANIA VARCHAR2 (50) CHECK (
        TYP_OGRZEWANIA IN (
            'GAZOWE',
            'ELEKTRYCZNE',
            'CO_MIEJSKIE',
            'POMPA_CIEPLA',
            'WEGLOWE',
            'INNE'
        )
        OR TYP_OGRZEWANIA IS NULL
    ),
    LICZBA_PITER NUMBER (3),
    WINDA NUMBER (1) DEFAULT 0 CHECK (WINDA IN (0, 1)),
    GARAZ NUMBER (1) DEFAULT 0 CHECK (GARAZ IN (0, 1)),
    NUMER_ADRESOWY VARCHAR2 (20),
    ULICA VARCHAR2 (200),
    KOD_POCZTOWY VARCHAR2 (10),
    MIASTO VARCHAR2 (100) NOT NULL,
    DZIELNICA VARCHAR2 (100)
);

-- ============================================================
-- Lokale mieszkalne i uzytkowe
-- UML: Lokal – metraz_m2, stan_wykonczenia, szacowana_wartosc
-- ============================================================
CREATE TABLE LOKALE (
    LOKAL_ID NUMBER DEFAULT SEQ_LOKALE.NEXTVAL PRIMARY KEY,
    BUDYNEK_ID NUMBER NOT NULL REFERENCES BUDYNKI (BUDYNEK_ID),
    NUMER_LOKALU VARCHAR2 (20),
    PIETRO NUMBER (3),
    METRAZ_M2 NUMBER (8, 2) NOT NULL CHECK (METRAZ_M2 > 0),
    LICZBA_POKOI NUMBER (3) CHECK (LICZBA_POKOI >= 0),
    BALKON NUMBER (1) DEFAULT 0 CHECK (BALKON IN (0, 1)),
    PARKING NUMBER (1) DEFAULT 0 CHECK (PARKING IN (0, 1)),
    STAN_WYKONCZENIA VARCHAR2 (30) CHECK (
        STAN_WYKONCZENIA IN (
            'DEWELOPERSKI',
            'DO_REMONTU',
            'DOBRY',
            'BARDZO_DOBRY',
            'WYSOKI_STANDARD'
        )
        OR STAN_WYKONCZENIA IS NULL
    ),
    TYP_LOKALU VARCHAR2 (30) DEFAULT 'MIESZKANIE' CHECK (
        TYP_LOKALU IN (
            'MIESZKANIE',
            'KAWALERKA',
            'LOKAL_UZYTKOWY'
        )
    ),
    SZACOWANA_WARTOSC NUMBER (15, 2)
);

-- ============================================================
-- Ksiegi wieczyste (EKW)
-- ============================================================
CREATE TABLE KSIEGI_WIECZYSTE (
    KW_ID NUMBER DEFAULT SEQ_KW.NEXTVAL PRIMARY KEY,
    NUMER_KW VARCHAR2 (30) NOT NULL UNIQUE,
    SAD_WIECZYSTOKSIEGOWY VARCHAR2 (200),
    DZIALKA_ID NUMBER REFERENCES DZIALKI (DZIALKA_ID),
    DATA_ZALOZENIA DATE
);

-- ============================================================
-- Historia wlasnosci (aktualny i historyczni wlasciciele)
-- Jeden wiersz = jeden wlasciciel jednej nieruchomosci w danym przedziale czasu.
-- Dokladnie jedno z pol: DZIALKA_ID, BUDYNEK_ID lub LOKAL_ID jest niepuste.
-- ============================================================
CREATE TABLE HISTORIA_WLASNOSCI (
    HISTORIA_ID NUMBER DEFAULT SEQ_HISTORIA_WL.NEXTVAL PRIMARY KEY,
    DZIALKA_ID NUMBER REFERENCES DZIALKI (DZIALKA_ID),
    BUDYNEK_ID NUMBER REFERENCES BUDYNKI (BUDYNEK_ID),
    LOKAL_ID NUMBER REFERENCES LOKALE (LOKAL_ID),
    USER_ID NUMBER NOT NULL REFERENCES USERS (USER_ID),
    UDZIAL_PROCENTOWY NUMBER (5, 2) DEFAULT 100 CHECK (
        UDZIAL_PROCENTOWY > 0
        AND UDZIAL_PROCENTOWY <= 100
    ),
    DATA_OD DATE NOT NULL,
    DATA_DO DATE,
    AKTYWNA NUMBER (1) DEFAULT 1 CHECK (AKTYWNA IN (0, 1))
);

-- ============================================================
-- Hipoteki i obciazenia nieruchomosci
-- Dokladnie jedno z pol: DZIALKA_ID, BUDYNEK_ID lub LOKAL_ID jest niepuste.
-- ============================================================
CREATE TABLE HIPOTEKI (
    HIPOTEKA_ID NUMBER DEFAULT SEQ_HIPOTEKI.NEXTVAL PRIMARY KEY,
    DZIALKA_ID NUMBER REFERENCES DZIALKI (DZIALKA_ID),
    BUDYNEK_ID NUMBER REFERENCES BUDYNKI (BUDYNEK_ID),
    LOKAL_ID NUMBER REFERENCES LOKALE (LOKAL_ID),
    WIERZYCIEL VARCHAR2 (200) NOT NULL,
    KWOTA NUMBER (15, 2) NOT NULL CHECK (KWOTA > 0),
    WALUTA VARCHAR2 (3) DEFAULT 'PLN',
    DATA_WPISU DATE NOT NULL,
    DATA_WYKRESLENIA DATE,
    AKTYWNA NUMBER (1) DEFAULT 1 CHECK (AKTYWNA IN (0, 1))
);

-- ============================================================
-- Transakcje kupna/sprzedazy
-- Dokladnie jedno z pol: DZIALKA_ID, BUDYNEK_ID lub LOKAL_ID jest niepuste.
-- Dane historyczne przechowywane min. 10 lat – nieusuwalne przez zwyklych uzytkownikow.
-- ============================================================
CREATE TABLE TRANSAKCJE (
    TRANSAKCJA_ID NUMBER DEFAULT SEQ_TRANSAKCJE.NEXTVAL PRIMARY KEY,
    DZIALKA_ID NUMBER REFERENCES DZIALKI (DZIALKA_ID),
    BUDYNEK_ID NUMBER REFERENCES BUDYNKI (BUDYNEK_ID),
    LOKAL_ID NUMBER REFERENCES LOKALE (LOKAL_ID),
    SPRZEDAJACY_ID NUMBER REFERENCES USERS (USER_ID),
    KUPUJACY_ID NUMBER REFERENCES USERS (USER_ID),
    CENA NUMBER (15, 2) NOT NULL CHECK (CENA > 0),
    WALUTA VARCHAR2 (3) DEFAULT 'PLN',
    DATA_TRANSAKCJI DATE NOT NULL,
    NOTARIUSZ VARCHAR2 (200),
    NUMER_AKTU VARCHAR2 (100)
);

-- ============================================================
-- Ogloszenia (wlasne + importowane z portali)
-- HASH_DEDUPLIKACJI obliczany przez SP_DEDUPLIKUJ_OGLOSZENIA
-- ============================================================
CREATE TABLE OGLOSZENIA (
    OGLOSZENIE_ID NUMBER DEFAULT SEQ_OGLOSZENIA.NEXTVAL PRIMARY KEY,
    DZIALKA_ID NUMBER REFERENCES DZIALKI (DZIALKA_ID),
    BUDYNEK_ID NUMBER REFERENCES BUDYNKI (BUDYNEK_ID),
    LOKAL_ID NUMBER REFERENCES LOKALE (LOKAL_ID),
    WYSTAWIAJACY_ID NUMBER REFERENCES USERS (USER_ID),
    ZRODLO_ID NUMBER NOT NULL REFERENCES ZRODLA_OGLOSZEN (ZRODLO_ID),
    TYP_OGLOSZENIA VARCHAR2 (20) NOT NULL CHECK (
        TYP_OGLOSZENIA IN ('SPRZEDAZ', 'WYNAJEM')
    ),
    TYTUL VARCHAR2 (300) NOT NULL,
    OPIS VARCHAR2 (4000),
    CENA NUMBER (15, 2) CHECK (CENA > 0),
    WALUTA VARCHAR2 (3) DEFAULT 'PLN',
    DATA_WYSTAWIENIA TIMESTAMP DEFAULT SYSTIMESTAMP,
    DATA_WYGASNIECIA DATE,
    STATUS VARCHAR2 (20) DEFAULT 'AKTYWNE' CHECK (
        STATUS IN (
            'ROBOCZE',
            'AKTYWNE',
            'ZAREZERWOWANE',
            'SPRZEDANE',
            'WYNAJETE',
            'WYCOFANE'
        )
    ),
    URL_ZRODLOWY VARCHAR2 (1000),
    HASH_DEDUPLIKACJI VARCHAR2 (64),
    JEST_DUPLIKATEM NUMBER (1) DEFAULT 0 CHECK (JEST_DUPLIKATEM IN (0, 1)),
    DUPLIKAT_GLOWNEGO_ID NUMBER
);

-- Self-referencing FK dla deduplikacji
ALTER TABLE OGLOSZENIA
    ADD CONSTRAINT FK_OGL_GLOWNE FOREIGN KEY (DUPLIKAT_GLOWNEGO_ID) REFERENCES OGLOSZENIA (OGLOSZENIE_ID);

-- ============================================================
-- Historia zmian cen ogloszen
-- ============================================================
CREATE TABLE HISTORIA_CEN_OGLOSZEN (
    HISTORIA_CEN_ID NUMBER DEFAULT SEQ_HISTORIA_CEN.NEXTVAL PRIMARY KEY,
    OGLOSZENIE_ID NUMBER NOT NULL REFERENCES OGLOSZENIA (OGLOSZENIE_ID),
    CENA_POPRZEDNIA NUMBER (15, 2),
    CENA_NOWA NUMBER (15, 2) NOT NULL CHECK (CENA_NOWA > 0),
    DATA_ZMIANY TIMESTAMP DEFAULT SYSTIMESTAMP
);

-- ============================================================
-- Statystyki rynkowe (zagregowane per miasto, dzielnica, typ)
-- Aktualizowane przez SP_OBLICZ_STATYSTYKI_RYNKOWE
-- ============================================================
CREATE TABLE STATYSTYKI_RYNKOWE (
    STATYSTYKI_ID NUMBER DEFAULT SEQ_STATYSTYKI.NEXTVAL PRIMARY KEY,
    MIESIAC NUMBER (2) NOT NULL CHECK (
        MIESIAC BETWEEN 1 AND 12
    ),
    ROK NUMBER (4) NOT NULL,
    MIASTO VARCHAR2 (100) NOT NULL,
    DZIELNICA VARCHAR2 (100),
    TYP_NIERUCHOMOSCI VARCHAR2 (30) NOT NULL CHECK (
        TYP_NIERUCHOMOSCI IN (
            'MIESZKANIE',
            'KAWALERKA',
            'LOKAL_UZYTKOWY',
            'DOM',
            'DZIALKA'
        )
    ),
    LICZBA_TRANSAKCJI NUMBER (10) DEFAULT 0,
    CENA_SREDNIA_M2 NUMBER (10, 2),
    CENA_MEDIANA_M2 NUMBER (10, 2),
    CENA_MIN_M2 NUMBER (10, 2),
    CENA_MAX_M2 NUMBER (10, 2),
    DATA_OBLICZENIA TIMESTAMP DEFAULT SYSTIMESTAMP,
    CONSTRAINT UQ_STATYSTYKI UNIQUE (
        MIESIAC,
        ROK,
        MIASTO,
        DZIELNICA,
        TYP_NIERUCHOMOSCI
    )
);

-- ============================================================
-- Indeksy
-- ============================================================
CREATE INDEX IDX_USERS_ROLA ON USERS (ROLA_ID);

CREATE INDEX IDX_DZIALKI_GMINA ON DZIALKI (GMINA, WOJEWODZTWO);

CREATE INDEX IDX_DZIALKI_PRZEZNACZENIE ON DZIALKI (PRZEZNACZENIE_ID);

CREATE INDEX IDX_BUDYNKI_DZIALKA ON BUDYNKI (DZIALKA_ID);

CREATE INDEX IDX_BUDYNKI_MIASTO ON BUDYNKI (MIASTO, DZIELNICA);

CREATE INDEX IDX_LOKALE_BUDYNEK ON LOKALE (BUDYNEK_ID);

CREATE INDEX IDX_LOKALE_TYP ON LOKALE (TYP_LOKALU);

CREATE INDEX IDX_KW_DZIALKA ON KSIEGI_WIECZYSTE (DZIALKA_ID);

CREATE INDEX IDX_HW_USER ON HISTORIA_WLASNOSCI (USER_ID);

CREATE INDEX IDX_HW_LOKAL ON HISTORIA_WLASNOSCI (LOKAL_ID);

CREATE INDEX IDX_HW_BUDYNEK ON HISTORIA_WLASNOSCI (BUDYNEK_ID);

CREATE INDEX IDX_HW_DZIALKA ON HISTORIA_WLASNOSCI (DZIALKA_ID);

CREATE INDEX IDX_HIP_LOKAL ON HIPOTEKI (LOKAL_ID);

CREATE INDEX IDX_HIP_AKTYWNA ON HIPOTEKI (AKTYWNA);

CREATE INDEX IDX_TR_LOKAL ON TRANSAKCJE (LOKAL_ID);

CREATE INDEX IDX_TR_DATA ON TRANSAKCJE (DATA_TRANSAKCJI);

CREATE INDEX IDX_TR_SPRZEDAJACY ON TRANSAKCJE (SPRZEDAJACY_ID);

CREATE INDEX IDX_OGL_LOKAL ON OGLOSZENIA (LOKAL_ID);

CREATE INDEX IDX_OGL_STATUS ON OGLOSZENIA (STATUS);

CREATE INDEX IDX_OGL_HASH ON OGLOSZENIA (HASH_DEDUPLIKACJI);

CREATE INDEX IDX_OGL_ZRODLO ON OGLOSZENIA (ZRODLO_ID);

CREATE INDEX IDX_OGL_WYSTAWIAJACY ON OGLOSZENIA (WYSTAWIAJACY_ID);

CREATE INDEX IDX_HC_OGLOSZENIE ON HISTORIA_CEN_OGLOSZEN (OGLOSZENIE_ID);

CREATE INDEX IDX_SR_MIASTO ON STATYSTYKI_RYNKOWE (MIASTO, ROK, MIESIAC);
