@startuml
title Diagram ERD – Ogolnopolska Baza Danych Nieruchomosci

skinparam linetype ortho
hide circle

entity "ROLE_UZYTKOWNIKOW" as RO {
  * ROLE_ID : NUMBER PK
  --
  NAZWA : VARCHAR2(50) UK
  OPIS : VARCHAR2(200)
  MOZE_WYSTAWIAC_OGLOSZENIA : NUMBER(1)
  WIDZI_DANE_OSOBOWE : NUMBER(1)
  MOZE_AKTUALIZOWAC_KATASTER : NUMBER(1)
  TYLKO_DANE_AGREGOWANE : NUMBER(1)
}

entity "USERS" as U {
  * USER_ID : NUMBER PK
  --
  IMIE : VARCHAR2(100)
  NAZWISKO : VARCHAR2(100)
  EMAIL : VARCHAR2(255) UK
  TELEFON : VARCHAR2(20)
  ROLA_ID : NUMBER FK
  STATUS : VARCHAR2(20)
  DATA_REJESTRACJI : TIMESTAMP
  DATA_USUNIECIA : TIMESTAMP [null]
}

entity "PRZEZNACZENIE_GRUNTOW" as PG {
  * PRZEZNACZENIE_ID : NUMBER PK
  --
  NAZWA : VARCHAR2(100) UK
  OPIS : VARCHAR2(500)
}

entity "DZIALKI" as D {
  * DZIALKA_ID : NUMBER PK
  --
  NUMER_EGIB : VARCHAR2(50) UK
  POWIERZCHNIA_M2 : NUMBER(12,2)
  PRZEZNACZENIE_ID : NUMBER FK [null]
  WSPOLRZEDNE_LAT : NUMBER(10,7) [null]
  WSPOLRZEDNE_LON : NUMBER(10,7) [null]
  GMINA : VARCHAR2(100)
  POWIAT : VARCHAR2(100) [null]
  WOJEWODZTWO : VARCHAR2(100)
  NUMER_KW : VARCHAR2(30) [null]
}

entity "BUDYNKI" as B {
  * BUDYNEK_ID : NUMBER PK
  --
  DZIALKA_ID : NUMBER FK
  ROK_BUDOWY : NUMBER(4) [null]
  MATERIAL_KONSTRUKCJI : VARCHAR2(50) [null]
  KLASA_ENERGETYCZNA : VARCHAR2(5) [null]
  TYP_OGRZEWANIA : VARCHAR2(50) [null]
  LICZBA_PITER : NUMBER(3) [null]
  WINDA : NUMBER(1)
  GARAZ : NUMBER(1)
  NUMER_ADRESOWY : VARCHAR2(20) [null]
  ULICA : VARCHAR2(200) [null]
  KOD_POCZTOWY : VARCHAR2(10) [null]
  MIASTO : VARCHAR2(100)
  DZIELNICA : VARCHAR2(100) [null]
}

entity "LOKALE" as L {
  * LOKAL_ID : NUMBER PK
  --
  BUDYNEK_ID : NUMBER FK
  NUMER_LOKALU : VARCHAR2(20) [null]
  PIETRO : NUMBER(3) [null]
  METRAZ_M2 : NUMBER(8,2)
  LICZBA_POKOI : NUMBER(3) [null]
  BALKON : NUMBER(1)
  PARKING : NUMBER(1)
  STAN_WYKONCZENIA : VARCHAR2(30) [null]
  TYP_LOKALU : VARCHAR2(30)
  SZACOWANA_WARTOSC : NUMBER(15,2) [null]
}

entity "KSIEGI_WIECZYSTE" as KW {
  * KW_ID : NUMBER PK
  --
  NUMER_KW : VARCHAR2(30) UK
  SAD_WIECZYSTOKSIEGOWY : VARCHAR2(200) [null]
  DZIALKA_ID : NUMBER FK [null]
  DATA_ZALOZENIA : DATE [null]
}

entity "HISTORIA_WLASNOSCI" as HW {
  * HISTORIA_ID : NUMBER PK
  --
  DZIALKA_ID : NUMBER FK [null]
  BUDYNEK_ID : NUMBER FK [null]
  LOKAL_ID : NUMBER FK [null]
  USER_ID : NUMBER FK
  UDZIAL_PROCENTOWY : NUMBER(5,2)
  DATA_OD : DATE
  DATA_DO : DATE [null]
  AKTYWNA : NUMBER(1)
}

entity "HIPOTEKI" as H {
  * HIPOTEKA_ID : NUMBER PK
  --
  DZIALKA_ID : NUMBER FK [null]
  BUDYNEK_ID : NUMBER FK [null]
  LOKAL_ID : NUMBER FK [null]
  WIERZYCIEL : VARCHAR2(200)
  KWOTA : NUMBER(15,2)
  WALUTA : VARCHAR2(3)
  DATA_WPISU : DATE
  DATA_WYKRESLENIA : DATE [null]
  AKTYWNA : NUMBER(1)
}

entity "TRANSAKCJE" as T {
  * TRANSAKCJA_ID : NUMBER PK
  --
  DZIALKA_ID : NUMBER FK [null]
  BUDYNEK_ID : NUMBER FK [null]
  LOKAL_ID : NUMBER FK [null]
  SPRZEDAJACY_ID : NUMBER FK [null]
  KUPUJACY_ID : NUMBER FK [null]
  CENA : NUMBER(15,2)
  WALUTA : VARCHAR2(3)
  DATA_TRANSAKCJI : DATE
  NOTARIUSZ : VARCHAR2(200) [null]
  NUMER_AKTU : VARCHAR2(100) [null]
}

entity "ZRODLA_OGLOSZEN" as ZO {
  * ZRODLO_ID : NUMBER PK
  --
  NAZWA : VARCHAR2(100) UK
  URL_BAZOWY : VARCHAR2(500) [null]
  AKTYWNE : NUMBER(1)
}

entity "OGLOSZENIA" as O {
  * OGLOSZENIE_ID : NUMBER PK
  --
  DZIALKA_ID : NUMBER FK [null]
  BUDYNEK_ID : NUMBER FK [null]
  LOKAL_ID : NUMBER FK [null]
  WYSTAWIAJACY_ID : NUMBER FK [null]
  ZRODLO_ID : NUMBER FK
  TYP_OGLOSZENIA : VARCHAR2(20)
  TYTUL : VARCHAR2(300)
  OPIS : VARCHAR2(4000) [null]
  CENA : NUMBER(15,2) [null]
  WALUTA : VARCHAR2(3)
  DATA_WYSTAWIENIA : TIMESTAMP
  DATA_WYGASNIECIA : DATE [null]
  STATUS : VARCHAR2(20)
  URL_ZRODLOWY : VARCHAR2(1000) [null]
  HASH_DEDUPLIKACJI : VARCHAR2(64) [null]
  JEST_DUPLIKATEM : NUMBER(1)
  DUPLIKAT_GLOWNEGO_ID : NUMBER FK [null]
}

entity "HISTORIA_CEN_OGLOSZEN" as HC {
  * HISTORIA_CEN_ID : NUMBER PK
  --
  OGLOSZENIE_ID : NUMBER FK
  CENA_POPRZEDNIA : NUMBER(15,2) [null]
  CENA_NOWA : NUMBER(15,2)
  DATA_ZMIANY : TIMESTAMP
}

entity "STATYSTYKI_RYNKOWE" as SR {
  * STATYSTYKI_ID : NUMBER PK
  --
  MIESIAC : NUMBER(2)
  ROK : NUMBER(4)
  MIASTO : VARCHAR2(100)
  DZIELNICA : VARCHAR2(100) [null]
  TYP_NIERUCHOMOSCI : VARCHAR2(30)
  LICZBA_TRANSAKCJI : NUMBER(10)
  CENA_SREDNIA_M2 : NUMBER(10,2) [null]
  CENA_MEDIANA_M2 : NUMBER(10,2) [null]
  CENA_MIN_M2 : NUMBER(10,2) [null]
  CENA_MAX_M2 : NUMBER(10,2) [null]
  DATA_OBLICZENIA : TIMESTAMP
}

' Relacje
RO ||--o{ U  : "rola uzytkownika"
U  ||--o{ HW : "byl wlascicielem"
U  ||--o{ O  : "wystawia ogloszenie"
U  ||--o{ T  : "sprzedaje (od)"
U  ||--o{ T  : "kupuje (do)"

PG }o--o{ D  : "przeznaczenie"
D  ||--o{ B  : "zawiera budynek"
B  ||--o{ L  : "zawiera lokal"
D  ||--o| KW : "ma ksiege wieczysta"

D  ||--o{ HW : "dzialka wlasnosci"
B  ||--o{ HW : "budynek wlasnosci"
L  ||--o{ HW : "lokal wlasnosci"

D  ||--o{ H  : "hipoteka dzialki"
B  ||--o{ H  : "hipoteka budynku"
L  ||--o{ H  : "hipoteka lokalu"

D  ||--o{ T  : "transakcja dzialki"
B  ||--o{ T  : "transakcja budynku"
L  ||--o{ T  : "transakcja lokalu"

ZO ||--o{ O  : "zrodlo ogloszenia"
D  ||--o{ O  : "ogloszenie dzialki"
B  ||--o{ O  : "ogloszenie budynku"
L  ||--o{ O  : "ogloszenie lokalu"
O  ||--o{ HC : "historia cen"
O  ||--o| O  : "duplikat glownego"
@enduml
